# Data-Structures-and-Algorithm-Analysis-in-C

./: CMakeLists.txt  fatal.h  main.c
Cursor/: cursor.c  cursor.h  testCurs.c  testCurs.h
LinkedList/: list.c  list.h  testlist.c  testlist.h
avltree/: avltree.c  avltree.h  testavltree.c  testavltree.h
binarySearchTree/: testTree.c  testTree.h  tree.c  tree.h
binheap/: binheap.c  binheap.h  testheap.c  testheap.h
disjset/: disjset.c  disjset.h
hashfunc/: hashfunc.c  hashfunc.h
hashquad/: hashquad.c  hashquad.h
hashsep/: hashsep.c  hashsep.h  testhash.c  testhash.h
leftheap/: leftheap.c  leftheap.h  testleftheap.c  testleftheap.h
polynomials/: list_P.c  list_P.h  polynomials.c  polynomials.h  polynomials_List.c  polynomials_List.h
queue/: queue.c  queue.h  testQueue.c  testQueue.h
sort/: sort.c  sort.h
stackar/: stackar.c  stackar.h  teststka.c  teststka.h
stackli/: stackli.c  stackli.h  testStackli.c  testStackli.h
